<resources>
    <string name="app_name">Backlogger</string>
    <string name="app_subtitle">Your cave manager</string>

    <!--    Custom View    -->
    <string name="custom_view_image">Custom View Image</string>
    <string name="custom_view_medium_text">Medium Text</string>
    <string name="custom_view_txtView">TextView</string>
    <string name="custom_view_platform">Platform</string>

    <!--    Main Activity    -->
    <string name="main_activity_add_button">Add Button</string>
    <string name="main_activity_no_entries">Your Backlog Is Empty</string>
    <string name="main_activity_menu_image">Menu</string>
    <string name="navigation_open">Open</string>
    <string name="navigation_close">Close</string>

    <!--    Video Games    -->
    <string name="video_games_title">Video Games</string>
    <string name="add_game_title">Title: </string>
    <string name="add_game_genre">Genre: </string>
    <string name="add_game_platform">Platform: </string>
    <string name="add_game_release_year">Year of Release: (optional)</string>
    <string name="add_game_duration_hours">Duration in hours: (optional)</string>
    <string name="add_game_btn_ok">OK</string>
    <string name="add_game_btn_cancel">Cancel</string>

    <!--    TV Shows    -->
    <string name="tv_shows_title">TV Shows</string>

    <!--    Movies    -->
    <string name="movies_title">Movies</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>